--- a/figuras.css
+++ b/figuras.css
@@ -20,15 +20,20 @@ body{
 .header p{
     padding-bottom: 1rem;
 }
+.super-container{
+    display: flex;
+    justify-content: center;
+}
 .main-container{
     width: 31rem;
     background-color: white;
     display: flex;
     flex-direction: column;
+    margin:1rem 2rem;
 }
 .figure-container{
     background-color: rgb(130, 130, 194);
-    max-width: 100vw;
+    max-width: 90vw;
     height: 30rem;
     display: flex;
     justify-content: center;
@@ -131,5 +136,8 @@ body{
     .buttons{
         display: flex;
         justify-content: space-around;
+    }
+    .super-container{
+        display: grid;
     }   
 }
